Settings: Revive settings-basic-page tests.

The previous SettingsBasicPageBrowserTest were loading the entire
Settings page, and attempted to test various subtle scrolling logic
which ended up being flaky, and disabled for 3 years.

Re-instating a subset of these tests, so that there is some coverage
for settings-basic-page, as opposed to none. The problematic tests
have been deleted. Also the new tests only load basic_page.html
similar to other Settings' unit tests.

Bug: 738146
Change-Id: I7b90fb95ed62bec3854543446f03963a834cea4a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2045225
Commit-Queue: Demetrios Papadopoulos <dpapad@chromium.org>
Auto-Submit: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#740259}