chrome/browser/ui/webui/settings/people_handler.cc
@@ -546,6 +546,7 @@ void PeopleHandler::OnQueryHistoryRecordingCompletion(
 }
 
 void PeopleHandler::HandleGetStoredAccounts(const base::ListValue* args) {
+  AllowJavascript();
   CHECK_EQ(1U, args->GetSize());
   const base::Value* callback_id;
   CHECK(args->Get(0, &callback_id));
